tests/neg-macros/i9685.check

-- [E008] Not Found Error: tests/neg-macros/i9685/Test_2.scala:3:4 -----------------------------------------------------
3 |  1.asdf // error
  |  ^^^^^^
  |  value asdf is not a member of Int
